# natural-language-study

./: .gitignore  pyproject.toml
data/: myfile.txt
natural_language/: __main__.py
natural_language/nlp_basics/: __init__.py
natural_language/text_basics/: literals.py  pdf_files.py  text_files.py
tests/: test_natural_language.py
