[tool.poetry]
name = "natural-language"
version = "0.1.0"
description = ""
authors = ["Italo Fontes <italo5123@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
