[tool.poetry]
name = "natural-language"
version = "0.1.0"
description = ""
authors = ["Tim Fontes"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
pyPDF2 = "^1.26.0"
spacy = "^3.1.0"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

